Versión github 3.0 | Mejores reunión

--- a/src/app/pages/games/createNewGame.html
+++ b/src/app/pages/games/createNewGame.html
@@ -6,12 +6,25 @@
   <mat-form-field style="width:400px !important">
     <mat-select style="width:400px !important" placeholder="{{'GAMES.GAMETYPE'|translate}}" [(ngModel)]="data.gameMode"
       required>
-      <mat-option (click)="timeSelect(0)" value="QuizPip">{{'GAMES.QUIZPIP'|translate}}</mat-option>
-      <mat-option (click)="timeSelect(1)" value="1by1">{{'GAMES.1by1'|translate}}</mat-option>
-      <mat-option (click)="timeSelect(999)" value="Qlasspip">{{'GAMES.Qlasspip'|translate}}</mat-option>
-      <mat-option (click)="timeSelect(999)" value="FlipCardsPip">{{'GAMES.FlipCardsPip'|translate}}</mat-option>
-      <mat-option (click)="timeSelect(999)" value="TimeToLearn">{{'GAMES.TimeToLearn'|translate}}</mat-option>
-      <mat-option (click)="timeSelect(999)" value="TrivialClip">{{'GAMES.TrivialClip'|translate}}</mat-option>
+      <mat-option matTooltip="{{'GAMES.QUIZPIPINFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(0)" value="QuizPip">
+        {{'GAMES.QUIZPIP'|translate}}</mat-option>
+      <mat-option matTooltip="{{'GAMES.1BY1INFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(1)" value="1by1">{{'GAMES.1by1'|translate}}</mat-option>
+      <mat-option matTooltip="{{'GAMES.QLASSPIPINFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(999)" value="Qlasspip" disabled>{{'GAMES.Qlasspip'|translate}}
+      </mat-option>
+      <mat-option matTooltip="{{'GAMES.FLIPCARDSPIPINFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(999)" value="FlipCardsPip">{{'GAMES.FlipCardsPip'|translate}}
+      </mat-option>
+      <mat-option matTooltip="{{'GAMES.TIMETOLEARNINFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(999)" value="TimeToLearn" disabled>
+        {{'GAMES.TimeToLearn'|translate}}
+      </mat-option>
+      <mat-option matTooltip="{{'GAMES.TRIVIALCLIPINFORMATION'|translate}}" matTooltipPosition="after"
+        matTooltipClass="tooltip" (click)="timeSelect(999)" value="TrivialClip" disabled>
+        {{'GAMES.TrivialClip'|translate}}
+      </mat-option>
     </mat-select>
   </mat-form-field>
   <mat-form-field *ngIf="findSelectime" style="width:400px !important">
